# treerecs

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
cmake/: DefaultBuildType.cmake  cmake_uninstall.cmake.in
ext/: CMakeLists.txt
ext/bpp/: CMakeLists.txt
ext/bpp/bpp-core/src/Bpp/: BppBoolean.h
ext/bpp/bpp-core/src/Bpp/Io/: OutputStream.h
ext/bpp/bpp-core/src/Bpp/Numeric/: AbstractParametrizable.h  ParameterAliasable.h  Parametrizable.h
ext/bpp/bpp-core/src/Bpp/Numeric/Function/: Functions.h
ext/bpp/bpp-phyl/src/Bpp/Phyl/Io/: IoTree.h  Newick.cpp  Newick.h
ext/bpp/bpp-phyl/src/Bpp/Phyl/Tree/: PhyloBranchParam.h  PhyloNode.cpp
ext/pll/: CMakeLists.txt
ext/pll/libpll-2/: .gitrepo  CMakeLists.txt
ext/pll/libpll-2/src/: derivatives.c  lex_rtree.c  lex_utree.c  models.c  random.c
ext/pll/pll-modules/: .gitrepo  CMakeLists.txt
ext/pll/pll-modules/src/algorithm/: algo_search.c  pllmod_algorithm.c
ext/pll/pll-modules/src/binary/: pll_binary.c
ext/pll/pll-modules/src/optimize/: pll_optimize.c
ext/pll/pll-modules/src/optimize/lbfgsb/: lbfgsb.c
ext/pll/pll-modules/src/tree/: consensus.c  lex_split.c  pll_tree.c  tree_hashtable.c  utree_distances.c
ext/pll/pll-modules/src/util/: models.c
ext/simple_svg/: CMakeLists.txt  simple_svg_1.0.0.hpp
scripts/: tester.py
scripts/src/: CLExec.py  RecSoftComposer.py  RecSoftExec.py  RecSoftOutParser.py  testWithData.py
src/: CMakeLists.txt  Treerecs.cpp  TreerecsCliUtils.cpp  TreerecsCliUtils.h  TreerecsParameters.h
src/misc/: ALEevaluate_undated.cpp  CMakeLists.txt  README.md  genetreeEditor.cpp
src/treerecs/: CMakeLists.txt  Constants.h
src/treerecs/algorithms/: NeighborJoining.cpp  NeighborJoining.h  Polytomysolver.cpp  Polytomysolver.h  ProfileNJ.cpp  ProfileNJ.h
src/treerecs/containers/: AbstractGrid.h  AbstractGrid.hpp  BipartitionList.cpp  BipartitionList.h  Cost.cpp  Cost.h  GeneMap.cpp  GeneMap.h  Grid.cpp  Grid.h  NodeProperty.cpp  NodeProperty.h  ReconcilableRootedTree.cpp  ReconcilableRootedTree.h  ReconciledRootedTree.cpp  ReconciledRootedTree.h  Singleton.cpp  Singleton.h  Table.cpp  Table.h
src/treerecs/tools/: BipartitionTools.cpp  BipartitionTools.h  LibpllEvaluation.cpp  LibpllEvaluation.h  PhyloTreeToolBox.cpp  PhyloTreeToolBox.h  SpeciesGeneMapper.cpp  SpeciesGeneMapper.h  Statistics.cpp  Statistics.h  SupportTools.cpp  SupportTools.h  Timer.cpp  Timer.h  random.cpp  random.h  random.hpp  utils.cpp  utils.h
src/treerecs/tools/ALE/: ALE.cpp  ALE.h  ALE_util.cpp  ALE_util.h  ALEevaluation.cpp  ALEevaluation.h  exODT.cpp  exODT.h  fractionMissing.cpp  fractionMissing.h
src/treerecs/tools/IO/: IO.cpp  IO.h  Newick.cpp  Newick.h  Nhx.cpp  Nhx.h  PhyloXML.cpp  PhyloXML.h  RecPhyloTreeToSVG.cpp  RecPhyloTreeToSVG.h  RefreshablePrinter.cpp  RefreshablePrinter.h  XMLUtils.cpp  XMLUtils.h
src/treerecs/tools/treeReconciliation/: ReconcilableRootedTreeGenerator.cpp  ReconcilableRootedTreeGenerator.h  ReconciledRootedTreeGenerator.cpp  ReconciledRootedTreeGenerator.h  TreeReconciliationConductor.cpp  TreeReconciliationConductor.h
src/treerecs/tools/utils/: utils_containers.cpp  utils_containers.h  utils_math.cpp  utils_math.h  utils_stream.cpp  utils_stream.h  utils_string.cpp  utils_string.h
